Fix #22696 - [Feature] Add toxicology

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths_fr.properties
@@ -45,13 +45,13 @@ path.exportciteo                         = Export des mat\u00E9riaux d'emballage
 path.exportclientscorelist				 = Export des \u00E9valuations clients
 path.exportclientsurvey					 = Export des questionnaires clients
 path.exportcompositionpackaging          = Export des listes composition et emballages
-path.exportdynamiccharactlist			 = Export des caract\u00E9ristiques calcul\u00E9es
-path.exportforbiddening					 = Export des ingr\u00E9dients interdits
+path.exportdynamiccharactlist            = Export des caract\u00E9ristiques calcul\u00E9es
+path.exportforbiddening                  = Export des ingr\u00E9dients interdits
 path.exportinglist                       = Export des ingr\u00E9dients
 path.exportlabelclaimlist                = Export des all\u00E9gations
-path.exportlabelingrulelist				 = Export des r\u00E8gles d'\u00E9tiquetage
+path.exportlabelingrulelist              = Export des r\u00E8gles d'\u00E9tiquetage
 path.exportlabelling                     = Export de l'\u00E9tiquetage
-path.exportlca							 = Export de l'analyse de cycle de vie
+path.exportlca                           = Export de l'analyse de cycle de vie
 path.exportncsynthesis                   = Synth\u00E8se des non conformit\u00E9s
 path.exportnutrients                     = Export des nutriments
 path.exportphysicochemicallist           = Export des physico-chimiques
@@ -192,6 +192,8 @@ path.supplierentities                    = Entit\u00E9s fournisseur
 path.suppliers                           = Fournisseurs
 path.svhcreasonsforinclusions            = Raisons de l'inclusion dans les SVHC
 path.targetmarkets                       = March\u00E9s cibles
+path.toxicities                          = Toxicologie
+path.toxing                              = Toxicologie des ingr\u00E9dients
 path.tradeitemtradechannel               = Circuits de distribution
 path.tradeitemunitdescriptorcode         = Types d'unit\u00E9 commerciale
 path.trademarks                          = Marques
