--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
@@ -138,6 +138,7 @@ bcpg_bcpgmodel.association.bcpg_supplierPlants.title                            
 bcpg_bcpgmodel.association.bcpg_suppliers.title                                 = Suppliers
 bcpg_bcpgmodel.association.bcpg_svhcListIng.title                               = Substance
 bcpg_bcpgmodel.association.bcpg_targetReconstitutionRef.title                   = Reconstituted ingredient
+bcpg_bcpgmodel.association.bcpg_toxListTox.title                                = Toxicity
 bcpg_bcpgmodel.association.bcpg_trademarkRef.description                        = Trademark
 bcpg_bcpgmodel.association.bcpg_trademarkRef.title                              = Trademark
 bcpg_bcpgmodel.prop.bcpg_plantApprovalNumbers.title                             = No. of approvals
@@ -296,6 +297,14 @@ bcpg_bcpgmodel.property.bcpg_ingListQtyPercWithYield.title                      
 bcpg_bcpgmodel.property.bcpg_ingListVolumeQtyPerc.description                   = Volume (%)
 bcpg_bcpgmodel.property.bcpg_ingListVolumeQtyPerc.title                         = Volume (%)
 bcpg_bcpgmodel.property.bcpg_ingMLName.title                                    = Multi-language name
+bcpg_bcpgmodel.property.bcpg_ingToxData.title                                   = Toxicologic data
+bcpg_bcpgmodel.property.bcpg_ingToxDermalAbsorption.title                       = Dermal absorption (%)
+bcpg_bcpgmodel.property.bcpg_ingToxMaxOcularIrritation.title                    = Max ocular irritation (%)
+bcpg_bcpgmodel.property.bcpg_ingToxMaxPhototoxic.title                          = Max phototoxic (%)
+bcpg_bcpgmodel.property.bcpg_ingToxMaxSensitization.title                       = Max sensitization (%)
+bcpg_bcpgmodel.property.bcpg_ingToxMaxSkinIrritation.title                      = Max skin irritation (%)
+bcpg_bcpgmodel.property.bcpg_ingToxMosMoe.title                                 = MoS/MoE
+bcpg_bcpgmodel.property.bcpg_ingToxPodSystemic.title                            = POD systemic (mg/kg/d)
 bcpg_bcpgmodel.property.bcpg_ingTypeDecThreshold.description                    = The type is detailed when percentage is exceeded
 bcpg_bcpgmodel.property.bcpg_ingTypeDecThreshold.title                          = Threshold (%)
 bcpg_bcpgmodel.property.bcpg_ingTypeDoNotDeclare.description                    = Do not declare type in labelling
@@ -520,6 +529,16 @@ bcpg_bcpgmodel.property.bcpg_supplierTel.title                                  
 bcpg_bcpgmodel.property.bcpg_svhcListMigrationPerc.title                        = Migration (%)
 bcpg_bcpgmodel.property.bcpg_svhcListQtyPerc.title                              = Quantity (%)
 bcpg_bcpgmodel.property.bcpg_svhcReasonsForInclusion.title                      = SVHC type
+bcpg_bcpgmodel.property.bcpg_toxCalculateSystemic.title                         = Calculate systemic values
+bcpg_bcpgmodel.property.bcpg_toxIngIng.title                                    = Ingredient
+bcpg_bcpgmodel.property.bcpg_toxIngMaxValue.title                               = Max value (%)
+bcpg_bcpgmodel.property.bcpg_toxIngSystemicValue.title                          = Systemic value (%)
+bcpg_bcpgmodel.property.bcpg_toxIngTox.title                                    = Toxicity
+bcpg_bcpgmodel.property.bcpg_toxListValue.title                                 = Relative maximum quantity (%)
+bcpg_bcpgmodel.property.bcpg_toxTypes.description                               = Toxicity type
+bcpg_bcpgmodel.property.bcpg_toxTypes.title                                     = Toxicity types
+bcpg_bcpgmodel.property.bcpg_toxValue.description                               = Final quantity (mg/d)
+bcpg_bcpgmodel.property.bcpg_toxValue.title                                     = Final quantity (mg/d)
 bcpg_bcpgmodel.property.bcpg_trademarkType.title                                = Type
 bcpg_bcpgmodel.property.bcpg_unitPrice.title                                    = Selling price per sales unit
 bcpg_bcpgmodel.property.bcpg_unitTotalCost.title                                = Cost per sales unit
@@ -656,6 +675,10 @@ bcpg_bcpgmodel.type.bcpg_supplier.description                                   
 bcpg_bcpgmodel.type.bcpg_supplier.title                                         = Supplier
 bcpg_bcpgmodel.type.bcpg_svhcList.description                                   = Substances of very high concern
 bcpg_bcpgmodel.type.bcpg_svhcList.title                                         = Dangerous substances
+bcpg_bcpgmodel.type.bcpg_tox.description                                        = Toxicity list (administration)
+bcpg_bcpgmodel.type.bcpg_tox.title                                              = Toxicity
+bcpg_bcpgmodel.type.bcpg_toxList.description                                    = Toxicity list
+bcpg_bcpgmodel.type.bcpg_toxList.title                                          = Toxicities
 bcpg_bcpgmodel.type.bcpg_trademark.description                                  = Trademark (administration)
 bcpg_bcpgmodel.type.bcpg_trademark.title                                        = Trademark
 
@@ -775,6 +798,11 @@ listconstraint.bcpg_reqTypes.Tolerated                                = Tolerate
 listconstraint.bcpg_synchronisableStates.Manual                       = Manual
 listconstraint.bcpg_synchronisableStates.Synchronized                 = Synchronized
 listconstraint.bcpg_synchronisableStates.Template                     = Template
+listconstraint.bcpg_toxTypesConstraint.OcularIrritation               = Ocular irritation
+listconstraint.bcpg_toxTypesConstraint.PhototoxicalPotential          = Phototoxical potential
+listconstraint.bcpg_toxTypesConstraint.Sensitization                  = Sensitization
+listconstraint.bcpg_toxTypesConstraint.SkinIrritation                 = Skin irritation
+listconstraint.bcpg_toxTypesConstraint.SystemicIngredient             = Systemic ingredient
 listconstraint.bcpg_variantColumns.bcpg_variantColumn1                = Variant 1
 listconstraint.bcpg_variantColumns.bcpg_variantColumn2                = Variant 2
 listconstraint.bcpg_variantColumns.bcpg_variantColumn3                = Variant 3
