--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
@@ -138,6 +138,7 @@ bcpg_bcpgmodel.association.bcpg_supplierPlants.title                            
 bcpg_bcpgmodel.association.bcpg_suppliers.title                                 = Fournisseurs
 bcpg_bcpgmodel.association.bcpg_svhcListIng.title                               = Substance
 bcpg_bcpgmodel.association.bcpg_targetReconstitutionRef.title                   = Ingr\u00E9dient reconstitu\u00E9
+bcpg_bcpgmodel.association.bcpg_toxListTox.title                                = Toxicit\u00E9
 bcpg_bcpgmodel.association.bcpg_trademarkRef.description                        = Marques
 bcpg_bcpgmodel.association.bcpg_trademarkRef.title                              = Marques
 bcpg_bcpgmodel.prop.bcpg_plantApprovalNumbers.title                             = N\u00B0 d'agr\u00E9ments
@@ -296,6 +297,14 @@ bcpg_bcpgmodel.property.bcpg_ingListQtyPercWithYield.title                      
 bcpg_bcpgmodel.property.bcpg_ingListVolumeQtyPerc.description                   = Pourcentage volumique
 bcpg_bcpgmodel.property.bcpg_ingListVolumeQtyPerc.title                         = Volume (%)
 bcpg_bcpgmodel.property.bcpg_ingMLName.title                                    = Nom multi-langue
+bcpg_bcpgmodel.property.bcpg_ingToxData.title                                   = Donn\u00E9es toxicologiques
+bcpg_bcpgmodel.property.bcpg_ingToxDermalAbsorption.title                       = Absorption cutan\u00E9e (%)
+bcpg_bcpgmodel.property.bcpg_ingToxMaxOcularIrritation.title                    = Irritation oculaire maximale (%)
+bcpg_bcpgmodel.property.bcpg_ingToxMaxPhototoxic.title                          = Phototoxique maximum (%)
+bcpg_bcpgmodel.property.bcpg_ingToxMaxSensitization.title                       = Sensibilisation maximale (%)
+bcpg_bcpgmodel.property.bcpg_ingToxMaxSkinIrritation.title                      = Irritation cutan\u00E9e maximale (%)
+bcpg_bcpgmodel.property.bcpg_ingToxMosMoe.title                                 = MoS/MoE
+bcpg_bcpgmodel.property.bcpg_ingToxPodSystemic.title                            = POD syst\u00E9mique (mg/kg/j)
 bcpg_bcpgmodel.property.bcpg_ingTypeDecThreshold.description                    = La cat\u00E9gorie r\u00E9glementaire est d\u00E9taill\u00E9e lorsque le seuil est d\u00E9pass\u00E9
 bcpg_bcpgmodel.property.bcpg_ingTypeDecThreshold.title                          = Seuil (%)
 bcpg_bcpgmodel.property.bcpg_ingTypeDoNotDeclare.description                    = Ne pas d\u00E9clarer le type dans l'\u00E9tiquetage
@@ -520,6 +529,16 @@ bcpg_bcpgmodel.property.bcpg_supplierTel.title                                  
 bcpg_bcpgmodel.property.bcpg_svhcListMigrationPerc.title                        = Migration (%)
 bcpg_bcpgmodel.property.bcpg_svhcListQtyPerc.title                              = Quantit\u00E9 (%)
 bcpg_bcpgmodel.property.bcpg_svhcReasonsForInclusion.title                      = Type de SVHC
+bcpg_bcpgmodel.property.bcpg_toxCalculateSystemic.title                         = Calculer les valeurs syst\u00E9miques
+bcpg_bcpgmodel.property.bcpg_toxIngIng.title                                    = Ingr\u00E9dient
+bcpg_bcpgmodel.property.bcpg_toxIngMaxValue.title                               = Valeur max (%)
+bcpg_bcpgmodel.property.bcpg_toxIngSystemicValue.title                          = Valeur syst\u00E9mique (%)
+bcpg_bcpgmodel.property.bcpg_toxIngTox.title                                    = Toxicit\u00E9
+bcpg_bcpgmodel.property.bcpg_toxListValue.title                                 = Quantit\u00E9 maximale relative (%)
+bcpg_bcpgmodel.property.bcpg_toxTypes.description                               = Type de toxicit\u00E9
+bcpg_bcpgmodel.property.bcpg_toxTypes.title                                     = Types de toxicit\u00E9
+bcpg_bcpgmodel.property.bcpg_toxValue.description                               = Quantit\u00E9 finale (mg/j)
+bcpg_bcpgmodel.property.bcpg_toxValue.title                                     = Quantit\u00E9 finale (mg/j)
 bcpg_bcpgmodel.property.bcpg_trademarkType.title                                = Type
 bcpg_bcpgmodel.property.bcpg_unitPrice.title                                    = Prix de vente par UV
 bcpg_bcpgmodel.property.bcpg_unitTotalCost.title                                = Co\u00FBt de revient par UV
@@ -656,6 +675,10 @@ bcpg_bcpgmodel.type.bcpg_supplier.description                                   
 bcpg_bcpgmodel.type.bcpg_supplier.title                                         = Fournisseur
 bcpg_bcpgmodel.type.bcpg_svhcList.description                                   = Substances extr\u00EAmement pr\u00E9occupantes
 bcpg_bcpgmodel.type.bcpg_svhcList.title                                         = Substances dangereuses
+bcpg_bcpgmodel.type.bcpg_tox.description                                        = Permet de saisir la toxicit\u00E9 (administration)
+bcpg_bcpgmodel.type.bcpg_tox.title                                              = Toxicit\u00E9
+bcpg_bcpgmodel.type.bcpg_toxList.description                                    = Liste de toxicit\u00E9s
+bcpg_bcpgmodel.type.bcpg_toxList.title                                          = Toxicit\u00E9s
 bcpg_bcpgmodel.type.bcpg_trademark.description                                  = Liste des marques (administration)
 bcpg_bcpgmodel.type.bcpg_trademark.title                                        = Marques
 
@@ -773,6 +796,11 @@ listconstraint.bcpg_reqTypes.Tolerated                                = Tol\u00E
 listconstraint.bcpg_synchronisableStates.Manual                       = Manuel
 listconstraint.bcpg_synchronisableStates.Synchronized                 = Synchronis\u00E9
 listconstraint.bcpg_synchronisableStates.Template                     = Mod\u00E8le
+listconstraint.bcpg_toxTypesConstraint.OcularIrritation               = Irritation oculaire
+listconstraint.bcpg_toxTypesConstraint.PhototoxicalPotential          = Potentiel phototoxique
+listconstraint.bcpg_toxTypesConstraint.Sensitization                  = Sensibilisation
+listconstraint.bcpg_toxTypesConstraint.SkinIrritation                 = Irritation cutan\u00E9e
+listconstraint.bcpg_toxTypesConstraint.SystemicIngredient             = Ingr\u00E9dient syst\u00E9mique
 listconstraint.bcpg_variantColumns.bcpg_variantColumn1                = Variante 1
 listconstraint.bcpg_variantColumns.bcpg_variantColumn2                = Variante 2
 listconstraint.bcpg_variantColumns.bcpg_variantColumn3                = Variante 3
