--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms_fr.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms_fr.properties
@@ -208,6 +208,7 @@ becpg.forms.set.product-name.label                             = D\u00E9signatio
 becpg.forms.set.product-specifications-criteria.label          = Crit\u00E8res sur les cahiers des charges
 becpg.forms.set.product.name                                   = Nom du produit
 becpg.forms.set.promotional.label                              = Promotion
+becpg.forms.set.properties.label                               = Propri\u00E9t\u00E9s
 becpg.forms.set.publication.label                              = Publication
 becpg.forms.set.regulatory.label                               = Conformit\u00E9
 becpg.forms.set.score-criteria.label                           = Crit\u00E8res sur les \u00E9valuations
@@ -219,6 +220,7 @@ becpg.forms.set.selected-products.label                        = S\u00E9lection 
 becpg.forms.set.survey-criteria.label                          = Crit\u00E8res sur les questionnaires
 becpg.forms.set.svhc-criteria.label                            = Crit\u00E8res sur les substances dangereuses
 becpg.forms.set.tertiaryPackaging.label                        = Palettisation
+becpg.forms.set.toxicology.label                               = Toxicologie
 becpg.forms.set.variableTradeItem.label                        = Article variable
 becpg.forms.unit.L                                             = L
 becpg.forms.unit.cL                                            = cL
