Fix #23952 - [Feature] Add multi column in ingredient formulation

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
@@ -286,7 +286,7 @@ bcpg_bcpgmodel.property.bcpg_ingListQtyMini.title                         = Mini
 bcpg_bcpgmodel.property.bcpg_ingListQtyPerc.title                         = Quantit\u00E9 (%)
 bcpg_bcpgmodel.property.bcpg_ingListQtyPerc1.title                        = Quantit\u00E9 1 (%)
 bcpg_bcpgmodel.property.bcpg_ingListQtyPerc2.title                        = Quantit\u00E9 2 (%)
-bcpg_bcpgmodel.property.bcpg_ingListQtyPerc3.title                        = Synth\u00E9tique 3 (%)
+bcpg_bcpgmodel.property.bcpg_ingListQtyPerc3.title                        = Synth\u00E9tique (%)
 bcpg_bcpgmodel.property.bcpg_ingListQtyPerc4.title                        = Naturelle (%)
 bcpg_bcpgmodel.property.bcpg_ingListQtyPercWithSecondaryYield.title       = Qt\u00E9 ap. REO (%)
 bcpg_bcpgmodel.property.bcpg_ingListQtyPercWithYield.title                = Qt\u00E9 ap. rdmt (%)
