--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
@@ -650,6 +650,8 @@ bcpg_bcpgmodel.type.bcpg_svhcList.title                                   = Dang
 bcpg_bcpgmodel.type.bcpg_trademark.description                            = Trademark (administration)
 bcpg_bcpgmodel.type.bcpg_trademark.title                                  = Trademark
 
+beCPG.copyOrBranch.typesToReset.description = Allows you to define type that will not be copy during a copy or merge, separated by commas
+
 listconstraint.bcpg_compoListUnit.P                                   = Each
 listconstraint.bcpg_compoListUnit.Perc                                = %
 listconstraint.bcpg_costTypes.Composition                             = Composition
