--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration_en.properties
@@ -7,6 +7,7 @@ beCPG.charact.name.format.readonly                             = true
 beCPG.charact.name.format.type                                 = string
 beCPG.comparison.name.format.description                       = Allows you to define for each type the name format to use during the comparison. The format to respect is type1|format1, type2|format2,...
 beCPG.copyOrBranch.propertiesToReset.description               = Allows you to define properties and associations that will not be preserved during a copy or merge, separated by commas
+beCPG.copyOrBranch.typesToReset.description                    = Allows you to define type that will not be copy during a copy or merge, separated by commas
 beCPG.currency.supported.description                           = Allows you to define the currencies supported by the system, separated by commas
 beCPG.datalist.effectiveFilterEnabled.description              = Allows you to filter non-effective datalists
 beCPG.defaultSearchTemplate.description                        = Allows you to set the default search template used by Alfresco
