Fix #20803 - [Feature] Add default title in comparaison report

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
@@ -34,6 +34,7 @@ bcpg_bcpgmodel.aspect.bcpg_reconstitutableAspect.description              = Reco
 bcpg_bcpgmodel.aspect.bcpg_reconstitutableAspect.title                    = Reconstitutable
 bcpg_bcpgmodel.aspect.bcpg_regulatoryAspect.title                         = Aspect conformit\u00E9
 bcpg_bcpgmodel.aspect.bcpg_regulatoryCodeAspect.title                     = Aspect code r\u00E8glementaire 
+bcpg_bcpgmodel.aspect.bcpg_stateActivityPreviousState.title               = Etat pr\u00E9c\u00E9dent
 bcpg_bcpgmodel.aspect.bcpg_supplierAspect.description                     = Fournisseur
 bcpg_bcpgmodel.aspect.bcpg_supplierAspect.title                           = Fournisseur
 bcpg_bcpgmodel.aspect.bcpg_suppliersAspect.description                    = Pour les produits achet\u00E9s \u00E0 un fournisseur
