Fix #23952 - [Feature] Add multi column in ingredient formulation

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
@@ -680,8 +680,8 @@ listconstraint.bcpg_filQtyPercTypes.Maxi                              = Maxi
 listconstraint.bcpg_filQtyPercTypes.Mini                              = Mini
 listconstraint.bcpg_filQtyPercTypes.QtyPerc1                          = Quantit\u00E9 1
 listconstraint.bcpg_filQtyPercTypes.QtyPerc2                          = Quantit\u00E9 2
-listconstraint.bcpg_filQtyPercTypes.QtyPerc3                          = Quantit\u00E9 3
-listconstraint.bcpg_filQtyPercTypes.QtyPerc4                          = Quantit\u00E9 4
+listconstraint.bcpg_filQtyPercTypes.QtyPerc3                          = Synth\u00E9tique
+listconstraint.bcpg_filQtyPercTypes.QtyPerc4                          = Naturelle
 listconstraint.bcpg_filQtyPercTypes.QtyPercWithSecondaryYield         = Qt\u00E9 ap. REO
 listconstraint.bcpg_filQtyPercTypes.QtyPercWithYield                  = Qt\u00E9 ap. rdmt
 listconstraint.bcpg_labelClaimValues.certified                        = Certifi\u00E9
