--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
@@ -392,6 +392,9 @@ bcpg_bcpgmodel.property.bcpg_nutListMaxi.title                                  
 bcpg_bcpgmodel.property.bcpg_nutListMeasurementPrecision.title                  = Pr\u00E9cision de la mesure
 bcpg_bcpgmodel.property.bcpg_nutListMethod.title                                = M\u00E9thode
 bcpg_bcpgmodel.property.bcpg_nutListMini.title                                  = Mini
+bcpg_bcpgmodel.property.bcpg_nutListReductionFormulatedValue.title              = % de r\u00E9duction calcul\u00E9
+bcpg_bcpgmodel.property.bcpg_nutListReductionValue.title                        = % de r\u00E9duction
+bcpg_bcpgmodel.property.bcpg_nutListReferenceValue.title                        = Valeur de r\u00E9f\u00E9rence
 bcpg_bcpgmodel.property.bcpg_nutListRequirementType.title                       = Valeur cible
 bcpg_bcpgmodel.property.bcpg_nutListRoundedValue.title                          = Valeur \u00E9tiquet\u00E9e
 bcpg_bcpgmodel.property.bcpg_nutListRoundedValuePrepared.title                  = Valeur \u00E9tiquet\u00E9e pr\u00E9par\u00E9e
@@ -415,6 +418,7 @@ bcpg_bcpgmodel.property.bcpg_nutrientProfileScoreFormula.title                  
 bcpg_bcpgmodel.property.bcpg_nutrientProfileVersion.title                       = Version du profil nutritionnel
 bcpg_bcpgmodel.property.bcpg_nutrientProfilingDetails.title                     = \u00C9chelle nutritionnelle
 bcpg_bcpgmodel.property.bcpg_nutrientProfilingScore.title                       = Score nutritionnel
+bcpg_bcpgmodel.property.bcpg_nutrientReferenceProducts.title                    = Produits de r\u00E9f\u00E9rence
 bcpg_bcpgmodel.property.bcpg_organoListValue.title                              = Valeur
 bcpg_bcpgmodel.property.bcpg_packagingDescription.title                         = Description du conditionnement
 bcpg_bcpgmodel.property.bcpg_packagingListIsMaster.title                        = Ma\u00EEtre
