--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/nut-database/nut-importer.get_fr.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/nut-database/nut-importer.get_fr.properties
@@ -5,9 +5,11 @@ button.load         = Charger
 
 import-nuts = Importer les nutriments
 
-label.entities = Produit
+label.addAsReferenceNutrient   = Importer comme nutriments de r\u00E9f\u00E9rence
+label.entities                 = Produit
+label.referenceNutrientLocales = Pays de r\u00E9f\u00E9rence
 ## Labels
-label.supplier = Base de donn\u00E9es
+label.supplier                 = Base de donn\u00E9es
 
 title = Importer un produit
 
