Fix #22696 - [Feature] Fix toxicology form

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths_fr.properties
@@ -42,8 +42,8 @@ path.ecoreports                          = Rapports sur les OM
 path.exchange                            = Echange
 path.exportallergens                     = Export des allerg\u00E8nes
 path.exportciteo                         = Export des mat\u00E9riaux d'emballage (Citeo)
-path.exportclientscorelist				 = Export des \u00E9valuations clients
-path.exportclientsurvey					 = Export des questionnaires clients
+path.exportclientscorelist               = Export des \u00E9valuations clients
+path.exportclientsurvey                  = Export des questionnaires clients
 path.exportcompositionpackaging          = Export des listes composition et emballages
 path.exportdynamiccharactlist            = Export des caract\u00E9ristiques calcul\u00E9es
 path.exportforbiddening                  = Export des ingr\u00E9dients interdits
@@ -56,20 +56,20 @@ path.exportncsynthesis                   = Synth\u00E8se des non conformit\u00E9
 path.exportnutrients                     = Export des nutriments
 path.exportphysicochemicallist           = Export des physico-chimiques
 path.exportproducts                      = Export des produits
-path.exportprojectscorelist				 = Export des \u00E9valuations projets
-path.exportprojectsurvey				 = Export des questionnaires projets
+path.exportprojectscorelist              = Export des \u00E9valuations projets
+path.exportprojectsurvey                 = Export des questionnaires projets
 path.exportqualitycontrols               = Export des contr\u00F4les qualit\u00E9
-path.exportscorelist					 = Export des \u00E9valuations
-path.exportspecallergens				 = Export des allerg\u00E8nes sp\u00E9cifications
-path.exportspeccompatibilitylist		 = Export des produits non compatibles
-path.exportspeclabelclaimlist			 = Export des all\u00E9gations sp\u00E9cifications
-path.exportspecnutrients				 = Export des nutriments sp\u00E9cifications
-path.exportspecphysicochemicallist		 = Export des physico-chimiques sp\u00E9cifications
+path.exportscorelist                     = Export des \u00E9valuations
+path.exportspecallergens                 = Export des allerg\u00E8nes sp\u00E9cifications
+path.exportspeccompatibilitylist         = Export des produits non compatibles
+path.exportspeclabelclaimlist            = Export des all\u00E9gations sp\u00E9cifications
+path.exportspecnutrients                 = Export des nutriments sp\u00E9cifications
+path.exportspecphysicochemicallist       = Export des physico-chimiques sp\u00E9cifications
 path.exportsupplierscontacts             = Export des contacts fournisseurs
-path.exportsupplierscorelist			 = Export des \u00E9valuations fournisseurs
-path.exportsuppliersurvey				 = Export des questionnaires fournisseurs
-path.exportsurvey						 = Export des questionnaires
-path.exportsvhc							 = Export des substances dangereuses
+path.exportsupplierscorelist             = Export des \u00E9valuations fournisseurs
+path.exportsuppliersurvey                = Export des questionnaires fournisseurs
+path.exportsurvey                        = Export des questionnaires
+path.exportsvhc                          = Export des substances dangereuses
 path.finishedproduct_hierarchy           = Hi\u00E9rarchie des produits finis
 path.geoorigins                          = Origines g\u00E9ographiques
 path.gs1_hierarchy                       = Hi\u00E9rarchie GS1
@@ -192,7 +192,7 @@ path.supplierentities                    = Entit\u00E9s fournisseur
 path.suppliers                           = Fournisseurs
 path.svhcreasonsforinclusions            = Raisons de l'inclusion dans les SVHC
 path.targetmarkets                       = March\u00E9s cibles
-path.toxicities                          = Toxicologie
+path.toxicities                          = Toxicit\u00E9s
 path.toxing                              = Toxicologie des ingr\u00E9dients
 path.tradeitemtradechannel               = Circuits de distribution
 path.tradeitemunitdescriptorcode         = Types d'unit\u00E9 commerciale
