Fix #24398 - [Feature] Add register channel activity system property

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration_en.properties
@@ -2,6 +2,7 @@
 admin-console.tool.group.system-configuration = System configuration
 admin-console.tool.system-configuration.label = beCPG System configuration
 
+beCPG.channel.list.register.activity.description               = Register activities for publication channel list update
 beCPG.charact.name.format.description                          = Allows you to define the display format of the characteristics name
 beCPG.charact.name.format.readonly                             = true
 beCPG.charact.name.format.type                                 = string
