--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration_fr.properties
@@ -2,6 +2,7 @@
 admin-console.tool.group.system-configuration = Configuration syst\u00E8me
 admin-console.tool.system-configuration.label = Configuration syst\u00E8me beCPG
 
+beCPG.channel.list.register.activity.description               = Enregistrer les activit\u00E9s pour la mise \u00E0 jour de la liste des canaux de publication
 beCPG.charact.name.format.description                          = Permet de d\u00E9finir le format d'affichage du nom des caract\u00E9ristiques
 beCPG.charact.name.format.readonly                             = true
 beCPG.charact.name.format.type                                 = string
