Fix #24398 - [Feature] Add register channel activity system property

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration_fr.properties
@@ -6,6 +6,7 @@ beCPG.charact.name.format.description                          = Permet de d\u00
 beCPG.charact.name.format.readonly                             = true
 beCPG.charact.name.format.type                                 = string
 beCPG.comparison.name.format.description                       = Permet de d\u00E9finir pour chaque type le format du nom \u00E0 utiliser lors de la comparaison. Le format \u00E0 respecter est type1|format1,type2|format2,...
+beCPG.connector.channel.register.activity.description          = Enregistrer les activit\u00E9s sur les canaux depuis le connecteur
 beCPG.copyOrBranch.propertiesToReset.description               = Permet de d\u00E9finir les propri\u00E9t\u00E9s et associations qui ne seront pas conserv\u00E9es lors d'une copie ou d'une fusion, s\u00E9par\u00E9es par des virgules
 beCPG.copyOrBranch.typesToReset.description                    = Permet de d\u00E9finir les types qui ne seront pas conserv\u00E9es lors d'une copie ou d'une fusion, s\u00E9par\u00E9es par des virgules
 beCPG.currency.supported.description                           = Permet de d\u00E9finir les devises support\u00E9es par le syst\u00E8me, s\u00E9par\u00E9es par des virgules
