--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration_en.properties
@@ -2,11 +2,11 @@
 admin-console.tool.group.system-configuration = System configuration
 admin-console.tool.system-configuration.label = beCPG System configuration
 
-beCPG.channel.list.register.activity.description               = Register activities for publication channel list update
 beCPG.charact.name.format.description                          = Allows you to define the display format of the characteristics name
 beCPG.charact.name.format.readonly                             = true
 beCPG.charact.name.format.type                                 = string
 beCPG.comparison.name.format.description                       = Allows you to define for each type the name format to use during the comparison. The format to respect is type1|format1, type2|format2,...
+beCPG.connector.channel.register.activity.description          = Register channel activities from connector
 beCPG.copyOrBranch.propertiesToReset.description               = Allows you to define properties and associations that will not be preserved during a copy or merge, separated by commas
 beCPG.copyOrBranch.typesToReset.description                    = Allows you to define type that will not be copy during a copy or merge, separated by commas
 beCPG.currency.supported.description                           = Allows you to define the currencies supported by the system, separated by commas
