Fix #24065 - [Feature] Add htmlLink feature

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel_en.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel_en.properties
@@ -75,6 +75,16 @@ bcpg_bcpgmodel.property.bcpg_entityTplIsDefault.title           = Default
 bcpg_bcpgmodel.property.bcpg_externalLinkMediaType.title        = Media type
 bcpg_bcpgmodel.property.bcpg_externalLinkTarget.title           = Target
 bcpg_bcpgmodel.property.bcpg_externalLinkUrl.title              = Url
+bcpg_bcpgmodel.property.bcpg_httpLink1.description              = Enter an HTTP link in one of the following formats: "Label":http://example.com or simply http://example.com
+bcpg_bcpgmodel.property.bcpg_httpLink1.title                    = Link 1
+bcpg_bcpgmodel.property.bcpg_httpLink2.description              = Enter an HTTP link in one of the following formats: "Label":http://example.com or simply http://example.com
+bcpg_bcpgmodel.property.bcpg_httpLink2.title                    = Link 2
+bcpg_bcpgmodel.property.bcpg_httpLink3.description              = Enter an HTTP link in one of the following formats: "Label":http://example.com or simply http://example.com
+bcpg_bcpgmodel.property.bcpg_httpLink3.title                    = Link 3
+bcpg_bcpgmodel.property.bcpg_httpLink4.description              = Enter an HTTP link in one of the following formats: "Label":http://example.com or simply http://example.com
+bcpg_bcpgmodel.property.bcpg_httpLink4.title                    = Link 4
+bcpg_bcpgmodel.property.bcpg_httpLink5.description              = Enter an HTTP link in one of the following formats: "Label":http://example.com or simply http://example.com
+bcpg_bcpgmodel.property.bcpg_httpLink5.title                    = Link 5
 bcpg_bcpgmodel.property.bcpg_isDefaultVariant.title             = Default variant
 bcpg_bcpgmodel.property.bcpg_isDeleted.title                    = Deleted
 bcpg_bcpgmodel.property.bcpg_isManualListItem.title             = Manual
