--- a/becpg-share/src/main/resources/alfresco/messages/becpg-controls_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-controls_fr.properties
@@ -1,4 +1,5 @@
 
+actions.delete-content = Supprimer un contenu
 actions.lock           = Verrouiller
 actions.select-color   = S\u00E9lectionner la couleur
 actions.unlock         = D\u00E9verrouiller
@@ -12,7 +13,7 @@ autocomplete.pagination.template.page-report  = Affichage des \u00E9l\u00E9ments
 
 beCPG.forms.validation.GTIN.message               = La valeur n'est pas un GTIN/EAN valide
 beCPG.forms.validation.checkEmailValidity.message = La valeur n'est pas un email valide
-beCPG.forms.validation.mandatoryIf.message= Le champ est obligatoire
+beCPG.forms.validation.mandatoryIf.message        = Le champ est obligatoire
 
 form.field.locale = Editer le champ multi-langue
 
