--- a/becpg-share/src/main/resources/alfresco/messages/becpg-share_en.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-share_en.properties
@@ -89,6 +89,7 @@ label.entity                 = Entity
 label.export-search          = Export the result
 label.notify-supplier        = Send notification to supplier
 label.revert                 = Revert
+label.saml                   = Connect with SSO
 label.select-columns.title   = Check Columns to show
 label.ssouser                = SSO user
 label.supplier-account.title = Supplier email address
@@ -138,6 +139,8 @@ message.copy-shareable-links.success          = Links copied to clipboard
 message.create.please-wait                    = Please wait. Creation in progress...
 message.createSupplier.failure                = You do not have the rights to perform this operation
 message.createSupplier.success                = User '{0}' associated to supplier
+message.delete-content.failure                = Error deleting content
+message.delete-content.success                = Content deleted with success
 message.delete.please-wait                    = Please wait. Entity being deleted...
 message.email.notValide                       = Please enter a valid email address.
 message.formulate-entities.failure            = Could not formulate entities
