--- a/becpg-share/src/main/resources/alfresco/messages/becpg-share_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-share_fr.properties
@@ -100,6 +100,15 @@ like.entity.add.label  = Aimer
 like.entity.add.tip    = Aimer cette entit\u00E9
 like.entity.remove.tip = Ne plus aimer
 
+linkshare.action.email.body        = Fichier {1} partag\u00E9 via beCPG, consultez-le ici\u00A0: {0}
+linkshare.action.email.label       = Partager par e-mail
+linkshare.action.email.subject     = Fichier partag\u00E9 {1}
+linkshare.action.facebook.label    = Partager via Facebook
+linkshare.action.facebook.message  = Fichier {1} partag\u00E9 via beCPG
+linkshare.action.google-plus.label = Partager via Google+
+linkshare.action.twitter.label     = Partager via Twitter
+linkshare.action.twitter.message   = Fichier {1} partag\u00E9 via beCPG
+
 menu.basket.empty                = Vider le panier
 menu.basket.show                 = Afficher le panier
 menu.create-content.entity       = Entit\u00E9...
@@ -129,6 +138,8 @@ message.copy-shareable-links.success          = Lines copi\u00E9s dans le presse
 message.create.please-wait                    = Veuillez patienter. Entit\u00E9 en cours de cr\u00E9ation...
 message.createSupplier.failure                = Vous n'avez pas les droits de r\u00E9aliser cette op\u00E9ration
 message.createSupplier.success                = L'utilisateur '{0}' est associ\u00E9 au fournissuer 
+message.delete-content.failure                = Erreur lors de la suppression du contenu
+message.delete-content.success                = Contenu supprim\u00E9 avec succ\u00E9s
 message.delete.please-wait                    = Veuillez patienter. Suppression d'entit\u00E9 en cours...
 message.email.notValide                       = Veuillez saisir une adresse \u00E9lectronique valide.
 message.formulate-entities.failure            = Echec de la formulation des entit\u00E9s
