--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel_fr.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel_fr.properties
@@ -73,9 +73,18 @@ bcpg_bcpgmodel.property.bcpg_entityTplClassName.title           = Type d'objet
 bcpg_bcpgmodel.property.bcpg_entityTplEnabled.title             = Actif
 bcpg_bcpgmodel.property.bcpg_entityTplIsDefault.title           = D\u00E9faut
 bcpg_bcpgmodel.property.bcpg_externalLinkMediaType.title        = Type de m\u00E9dia
-bcpg_bcpgmodel.property.bcpg_externalLinkMediaTypes.title       = Media type
 bcpg_bcpgmodel.property.bcpg_externalLinkTarget.title           = Cible
 bcpg_bcpgmodel.property.bcpg_externalLinkUrl.title              = Url
+bcpg_bcpgmodel.property.bcpg_httpLink1.description              = Entrez un lien HTTP dans l'un des formats suivants : "Libell\u00E9":http://example.com ou simplement http://example.com
+bcpg_bcpgmodel.property.bcpg_httpLink1.title                    = Lien 1
+bcpg_bcpgmodel.property.bcpg_httpLink2.description              = Entrez un lien HTTP dans l'un des formats suivants : "Libell\u00E9":http://example.com ou simplement http://example.com
+bcpg_bcpgmodel.property.bcpg_httpLink2.title                    = Lien 2
+bcpg_bcpgmodel.property.bcpg_httpLink3.description              = Entrez un lien HTTP dans l'un des formats suivants : "Libell\u00E9":http://example.com ou simplement http://example.com
+bcpg_bcpgmodel.property.bcpg_httpLink3.title                    = Lien 3
+bcpg_bcpgmodel.property.bcpg_httpLink4.description              = Entrez un lien HTTP dans l'un des formats suivants : "Libell\u00E9":http://example.com ou simplement http://example.com
+bcpg_bcpgmodel.property.bcpg_httpLink4.title                    = Lien 4
+bcpg_bcpgmodel.property.bcpg_httpLink5.description              = Entrez un lien HTTP dans l'un des formats suivants : "Libell\u00E9":http://example.com ou simplement http://example.com
+bcpg_bcpgmodel.property.bcpg_httpLink5.title                    = Lien 5
 bcpg_bcpgmodel.property.bcpg_isDefaultVariant.title             = Variante par d\u00E9faut
 bcpg_bcpgmodel.property.bcpg_isDeleted.title                    = Supprim\u00E9
 bcpg_bcpgmodel.property.bcpg_isManualListItem.title             = Manuel
